sdk/communication/arm-communication/samples/v4/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                   | **Description**                                                                                                                                                                                                                                                                              |
| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [communicationServicesCheckNameAvailabilitySample.js][communicationserviceschecknameavailabilitysample]         | Checks that the CommunicationService name is valid and is not already in use. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/checkNameAvailabilityAvailable.json                                  |
| [communicationServicesCreateOrUpdateSample.js][communicationservicescreateorupdatesample]                       | Create a new CommunicationService or update an existing CommunicationService. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/createOrUpdate.json                                                  |
| [communicationServicesDeleteSample.js][communicationservicesdeletesample]                                       | Operation to delete a CommunicationService. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/delete.json                                                                                            |
| [communicationServicesGetSample.js][communicationservicesgetsample]                                             | Get the CommunicationService and its properties. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/get.json                                                                                          |
| [communicationServicesLinkNotificationHubSample.js][communicationserviceslinknotificationhubsample]             | Links an Azure Notification Hub to this communication service. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/linkNotificationHub.json                                                            |
| [communicationServicesListByResourceGroupSample.js][communicationserviceslistbyresourcegroupsample]             | Handles requests to list all resources in a resource group. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/listByResourceGroup.json                                                               |
| [communicationServicesListBySubscriptionSample.js][communicationserviceslistbysubscriptionsample]               | Handles requests to list all resources in a subscription. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/listBySubscription.json                                                                  |
| [communicationServicesListKeysSample.js][communicationserviceslistkeyssample]                                   | Get the access keys of the CommunicationService resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/listKeys.json                                                                            |
| [communicationServicesRegenerateKeySample.js][communicationservicesregeneratekeysample]                         | Regenerate CommunicationService access key. PrimaryKey and SecondaryKey cannot be regenerated at the same time. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/regenerateKey.json                 |
| [communicationServicesUpdateSample.js][communicationservicesupdatesample]                                       | Operation to update an existing CommunicationService. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/update.json                                                                                  |
| [domainsCancelVerificationSample.js][domainscancelverificationsample]                                           | Cancel verification of DNS record. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/domains/cancelVerification.json                                                                                                       |
| [domainsCreateOrUpdateSample.js][domainscreateorupdatesample]                                                   | Add a new Domains resource under the parent EmailService resource or update an existing Domains resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/domains/createOrUpdate.json                                    |
| [domainsDeleteSample.js][domainsdeletesample]                                                                   | Operation to delete a Domains resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/domains/delete.json                                                                                                              |
| [domainsGetSample.js][domainsgetsample]                                                                         | Get the Domains resource and its properties. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/domains/get.json                                                                                                            |
| [domainsInitiateVerificationSample.js][domainsinitiateverificationsample]                                       | Initiate verification of DNS record. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/domains/initiateVerification.json                                                                                                   |
| [domainsListByEmailServiceResourceSample.js][domainslistbyemailserviceresourcesample]                           | Handles requests to list all Domains resources under the parent EmailServices resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/domains/listByEmailService.json                                                  |
| [domainsUpdateSample.js][domainsupdatesample]                                                                   | Operation to update an existing Domains resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/domains/update.json                                                                                                    |
| [emailServicesCreateOrUpdateSample.js][emailservicescreateorupdatesample]                                       | Create a new EmailService or update an existing EmailService. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/emailServices/createOrUpdate.json                                                                          |
| [emailServicesDeleteSample.js][emailservicesdeletesample]                                                       | Operation to delete a EmailService. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/emailServices/delete.json                                                                                                            |
| [emailServicesGetSample.js][emailservicesgetsample]                                                             | Get the EmailService and its properties. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/emailServices/get.json                                                                                                          |
| [emailServicesListByResourceGroupSample.js][emailserviceslistbyresourcegroupsample]                             | Handles requests to list all resources in a resource group. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/emailServices/listByResourceGroup.json                                                                       |
| [emailServicesListBySubscriptionSample.js][emailserviceslistbysubscriptionsample]                               | Handles requests to list all resources in a subscription. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/emailServices/listBySubscription.json                                                                          |
| [emailServicesListVerifiedExchangeOnlineDomainsSample.js][emailserviceslistverifiedexchangeonlinedomainssample] | Get a list of domains that are fully verified in Exchange Online. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/emailServices/getVerifiedExchangeOnlineDomains.json                                                    |
| [emailServicesUpdateSample.js][emailservicesupdatesample]                                                       | Operation to update an existing EmailService. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/emailServices/update.json                                                                                                  |
| [operationsListSample.js][operationslistsample]                                                                 | Lists all of the available REST API operations of the Microsoft.Communication provider. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/communicationServices/operationsList.json                                        |
| [senderUsernamesCreateOrUpdateSample.js][senderusernamescreateorupdatesample]                                   | Add a new SenderUsername resource under the parent Domains resource or update an existing SenderUsername resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/senderUsernames/createOrUpdate.json                   |
| [senderUsernamesDeleteSample.js][senderusernamesdeletesample]                                                   | Operation to delete a SenderUsernames resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/senderUsernames/delete.json                                                                                              |
| [senderUsernamesGetSample.js][senderusernamesgetsample]                                                         | Get a valid sender username for a domains resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/senderUsernames/get.json                                                                                             |
| [senderUsernamesListByDomainsSample.js][senderusernameslistbydomainssample]                                     | List all valid sender usernames for a domains resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/senderUsernames/listByDomain.json                                                                                |
| [smtpUsernamesCreateOrUpdateSample.js][smtpusernamescreateorupdatesample]                                       | Create or update an SmtpUsernameResource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/smtpUsername/createOrUpdate.json                                                                                               |
| [smtpUsernamesDeleteSample.js][smtpusernamesdeletesample]                                                       | Operation to delete a single SmtpUsername resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/smtpUsername/delete.json                                                                                             |
| [smtpUsernamesGetSample.js][smtpusernamesgetsample]                                                             | Get a SmtpUsernameResource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/smtpUsername/get.json                                                                                                                        |
| [smtpUsernamesListSample.js][smtpusernameslistsample]                                                           | Get all SmtpUsernameResources for a Communication resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/smtpUsername/getAll.json                                                                                     |
| [suppressionListAddressesCreateOrUpdateSample.js][suppressionlistaddressescreateorupdatesample]                 | Create or update a SuppressionListAddress. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/createOrUpdateAddress.json                                                                                   |
| [suppressionListAddressesDeleteSample.js][suppressionlistaddressesdeletesample]                                 | Operation to delete a single address from a suppression list. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/deleteAddress.json                                                                        |
| [suppressionListAddressesGetSample.js][suppressionlistaddressesgetsample]                                       | Get a SuppressionListAddress. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/getAddress.json                                                                                                           |
| [suppressionListAddressesListSample.js][suppressionlistaddresseslistsample]                                     | Get all the addresses in a suppression list. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/getAddresses.json                                                                                          |
| [suppressionListsCreateOrUpdateSample.js][suppressionlistscreateorupdatesample]                                 | Add a new SuppressionList resource under the parent Domains resource or update an existing SuppressionList resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/createOrUpdateSuppressionList.json |
| [suppressionListsDeleteSample.js][suppressionlistsdeletesample]                                                 | Delete a SuppressionList. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/deleteSuppressionList.json                                                                                                    |
| [suppressionListsGetSample.js][suppressionlistsgetsample]                                                       | Get a SuppressionList resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/getSuppressionList.json                                                                                                 |
| [suppressionListsListByDomainSample.js][suppressionlistslistbydomainsample]                                     | List all suppression lists for a domains resource. x-ms-original-file: specification/communication/resource-manager/Microsoft.Communication/stable/2025-09-01/examples/suppressionLists/getSuppressionLists.json                                                                             |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node communicationServicesCheckNameAvailabilitySample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env COMMUNICATION_SUBSCRIPTION_ID="<communication subscription id>" node communicationServicesCheckNameAvailabilitySample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[communicationserviceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesCheckNameAvailabilitySample.js
[communicationservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesCreateOrUpdateSample.js
[communicationservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesDeleteSample.js
[communicationservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesGetSample.js
[communicationserviceslinknotificationhubsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesLinkNotificationHubSample.js
[communicationserviceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesListByResourceGroupSample.js
[communicationserviceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesListBySubscriptionSample.js
[communicationserviceslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesListKeysSample.js
[communicationservicesregeneratekeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesRegenerateKeySample.js
[communicationservicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/communicationServicesUpdateSample.js
[domainscancelverificationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/domainsCancelVerificationSample.js
[domainscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/domainsCreateOrUpdateSample.js
[domainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/domainsDeleteSample.js
[domainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/domainsGetSample.js
[domainsinitiateverificationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/domainsInitiateVerificationSample.js
[domainslistbyemailserviceresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/domainsListByEmailServiceResourceSample.js
[domainsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/domainsUpdateSample.js
[emailservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/emailServicesCreateOrUpdateSample.js
[emailservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/emailServicesDeleteSample.js
[emailservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/emailServicesGetSample.js
[emailserviceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/emailServicesListByResourceGroupSample.js
[emailserviceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/emailServicesListBySubscriptionSample.js
[emailserviceslistverifiedexchangeonlinedomainssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/emailServicesListVerifiedExchangeOnlineDomainsSample.js
[emailservicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/emailServicesUpdateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/operationsListSample.js
[senderusernamescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/senderUsernamesCreateOrUpdateSample.js
[senderusernamesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/senderUsernamesDeleteSample.js
[senderusernamesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/senderUsernamesGetSample.js
[senderusernameslistbydomainssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/senderUsernamesListByDomainsSample.js
[smtpusernamescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/smtpUsernamesCreateOrUpdateSample.js
[smtpusernamesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/smtpUsernamesDeleteSample.js
[smtpusernamesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/smtpUsernamesGetSample.js
[smtpusernameslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/smtpUsernamesListSample.js
[suppressionlistaddressescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListAddressesCreateOrUpdateSample.js
[suppressionlistaddressesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListAddressesDeleteSample.js
[suppressionlistaddressesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListAddressesGetSample.js
[suppressionlistaddresseslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListAddressesListSample.js
[suppressionlistscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListsCreateOrUpdateSample.js
[suppressionlistsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListsDeleteSample.js
[suppressionlistsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListsGetSample.js
[suppressionlistslistbydomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/communication/arm-communication/samples/v4/javascript/suppressionListsListByDomainSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-communication?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/communication/arm-communication/README.md
